# bird_alert

./: .gitignore  README.md  app.ipynb  bird_alert.ipynb  pyproject.toml
